🗃️ Added logs, orders pagination
